2009-06-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs: Fix
	  build.

2009-06-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs:
	  Newlines are technically valid in attribute values. Only
	  emit a warning, not an error.

2009-05-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XmlClosingTagState.cs: Improve
	  an error message.

2009-05-01  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs: Break
	  on newlines. Better error reporting.

	* MonoDevelop.Xml.StateEngine/XmlTagState.cs: Better error
	  reporting.

2009-04-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor/DeclarationViewWindow.cs: Updated
	  declaration view from MonoDevelop.Projects.Gui

2009-04-17  Mike Kestner  <mkestner@novell.com>

	* MonoDevelop.XmlEditor.csproj: don't require specific
	gtk-sharp version.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.XmlEditor.addin.xml: Bump MD version.

2009-03-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor/XmlDocumentParser.cs: Track API
	  changes.

2009-03-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.csproj: Don't local-copy project refs.

2009-03-13  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* XmlEditor.glade: Making some strings not translatable.

2009-03-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor.csproj: Moved text editor to core

2009-03-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XmlDocTypeState.cs: Don't
	  capture quotes.

2009-03-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Track
	  doctype parsing changes. Fix jumping to selections.

	* MonoDevelop.Xml.StateEngine/XDom.cs: